# gcf-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/gcf/: __init__.py  __main__.py  cli.py  constants.py  decode.py  decode_generic.py  delta.py  encode.py  generic.py  generic_delta.py  packroot.py  scalar.py  session.py  stream.py  stream_generic.py  types.py
tests/: test_conformance_v2.py  test_decode.py  test_delta.py  test_encode.py  test_generic.py  test_generic_delta.py  test_generic_delta_fuzz.py  test_generic_delta_session.py  test_multiformat_roundtrip.py  test_roundtrip.py  test_roundtrip_v2.py  test_session.py  test_stream.py  test_stream_generic.py
