[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcf-python"
version = "2.1.0"
description = "Drop-in JSON replacement for AI pipelines. 79% fewer tokens. 90.7% comprehension across 10 models. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Blackwell Systems" },
]
keywords = ["gcf", "llm", "mcp", "token-efficient", "graph", "wire-format"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.scripts]
gcf = "gcf.cli:main"

[project.urls]
Homepage = "https://github.com/blackwell-systems/gcf-python"
Documentation = "https://blackwell-systems.github.io/gcf/"
Specification = "https://github.com/blackwell-systems/gcf"

[tool.hatch.build.targets.wheel]
packages = ["src/gcf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
