[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcf-python"
version = "2.4.0"
description = "The AI-native wire format for structured data. 50-92% fewer tokens than JSON, with multi-turn delta encoding for agent loops. 100% comprehension on every frontier model. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Blackwell Systems" },
]
keywords = ["gcf", "llm", "mcp", "token-efficient", "graph", "wire-format", "delta", "multi-turn", "agents"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.scripts]
gcf = "gcf.cli:main"

[project.urls]
Homepage = "https://github.com/blackwell-systems/gcf-python"
Documentation = "https://gcformat.com/"
Specification = "https://github.com/blackwell-systems/gcf"

[tool.hatch.build.targets.wheel]
packages = ["src/gcf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
